# limit-suspicious-requests

./: .env.local.sample  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/account/: admin.py  managers.py  models.py
apps/account/serializers/: auth.py  user.py
apps/account/strategy_registration/: strategy_factory.py
apps/account/tests/: test_model.py  tests_views_user.py
apps/account/urls/: __init__.py
apps/account/urls/api/: __init__.py  auth.py  user.py
apps/account/views/views_api/: auth.py  user.py
apps/core/: middlewares.py  validators.py
apps/core/management/commands/: creat_a_super_user.py
apps/core/mixin/: mixin_model.py
config/: settings.py  urls.py
utility/: Dockerfile
utility/otp_redis/: otp_email.py  otp_sms.py
