[tool.poetry]
name = "limit-suspicious-requests"
version = "0.1.0"
description = ""
authors = ["pedramkarimii <pedram@9060.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-decouple = "^3.8"
django-jazzmin = "^3.0.0"
django = "^5.0.7"
djangorestframework = "^3.15.2"
gunicorn = "^22.0.0"
redis = "^5.0.8"
pytz = "^2024.1"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
pycryptodome = "^3.20.0"
django-redis = "^5.4.0"
kavenegar = "^1.1.2"


[tool.poetry.group.dev.dependencies]
model-bakery = "^1.18.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
